# dylangames-mcp-chess-engine

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENT_PROMPT.md  CHANGELOG.md  DOCKER.md  Dockerfile  LICENSE  README.md  __version__.py  claude_desktop_config.json  claude_desktop_config_macos.json  claude_desktop_config_wsl.json  docker-compose.yml  dylangames-mcp-chess-agent  pyproject.toml  run_mcp_inspector.py
.cursor/rules/: poetry.mdc
.github/workflows/: ci-cd.yml
engines/: README.md
engines/stockfish/: README.md
src/: __init__.py  engine_wrapper.py  main.py
src/chesspal_mcp_engine/: __init__.py  config.py  engine_wrapper.py  health_server.py  logging_config.py  main.py  models.py  shutdown.py
src/dylangames_mcp_chess_engine/: __init__.py  config.py  engine_wrapper.py  logging_config.py  main.py  models.py  shutdown.py
tests/: __init__.py  conftest.py  test_config.py  test_direct.py  test_docker.py  test_engine_wrapper.py  test_engine_wrapper_additional.py  test_engine_wrapper_error_handling.py  test_health_server.py  test_integration.py  test_main_cli.py  test_main_engine.py  test_main_engine_additional.py  test_models.py  test_shutdown.py  test_shutdown_additional.py  tests.py
util/: claude_desktop_config_wsl.json
